fix: Home - align works to left in mobile

--- a/client/src/pages/scss/index.scss
+++ b/client/src/pages/scss/index.scss
@@ -70,13 +70,16 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      max-width: 75%;
     }
 
     h1 {
       text-align: center;
-      margin-bottom: 50px;
-      max-width: 60%;
       font-size: 40px;
+
+      &:last-of-type {
+        margin-bottom: 20px;
+      }
     }
 
     button {
@@ -166,10 +169,15 @@
     }
 
     .works {
-      h1 {
-        margin-bottom: 50px;
+      &-wrapper {
         max-width: 75%;
-        font-size: 32px;
+        align-items: flex-start;
+
+        h1 {
+          font-size: 32px;
+          text-align: left;
+          max-width: 100%;
+        }
       }
     }
 
